# OCRust

./: .gitignore  Cargo.toml  README.md  blueprint.txt  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
android-wrapper/: build.gradle
android-wrapper/src/main/java/com/rfx/compressor/: ScreenCompressor.java
examples/: compress_sample.rs  read_ocrust.rs
src/: compressor.rs  encoder.rs  format.rs  lib.rs  ocrust.udl
tests/: integration.rs
