[package]
name = "ocrust"
version = "1.0.0"
edition = "2021"
authors = ["Ralph Lawrence <dev@0xrlawrence.com>"]
description = "A hyper-optimized, memory-safe Rust NDK utility to downscale, grayscale, and compress Android screen bitmaps into minimal WebP buffers."
license = "GPL-3.0-or-later"
repository = "https://github.com/0xrlawrence/OCRust"
keywords = ["android", "ndk", "webp", "compression", "screenshot"]
categories = ["multimedia::images", "compression"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jni = { version = "0.22", default-features = false }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
webp = "0.3"
bytemuck = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"

[dev-dependencies]
image = { version = "0.25", features = ["jpeg", "png"] }

[[example]]
name = "compress_sample"
path = "examples/compress_sample.rs"

[[example]]
name = "read_ocrust"
path = "examples/read_ocrust.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
